<?xml version="1.0"?>
<package format="3">
  <name>isaaclab_height_scan_builder</name>
  <version>0.0.1</version>
  <description>Height Scan builder for Isaaclab policy observation</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <build_depend>cppzmq</build_depend>
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>gz-math7</build_depend>
  <build_depend>protobuf</build_depend>

  <exec_depend>cppzmq</exec_depend>
  <exec_depend>gz-sim8</exec_depend>
  <exec_depend>gz-plugin2</exec_depend>
  <exec_depend>gz-math7</exec_depend>
  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
